# SkyDash

./: .gitignore  FUTURE.md  README.md  pyproject.toml
.github/workflows/: skydashCI.yml
assets/: custom.css
src/: app.py  callbacks.py  config.py  dash_app.py  layout.py  map_plot.py  opensky_data.py
