[project]
name = "realtimeflighttracker_local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas >=2.2,<3.0",  # ensure we're in the 2.x range
    "folium >= 0.15, < 1.0",
    "requests",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    "venv",
    "requests",
    "pandas",
    "folium",
]
